GNOME Bugzilla – Bug 731533
wavparse: Infinite loop in wavparse with some files
Last modified: 2014-06-28 08:30:38 UTC
Reproduction : wget https://dl.dropboxusercontent.com/u/2804070/STE-002.wav && gst-launch-1.0 playbin uri=file://$PWD/STE-002.wav The regression was introduced in: commit 2e277bb34173b988c10a9f43d39f223a50a9da94 Author: Stefan Sauer <ensonic@users.sf.net> Date: Mon Dec 30 14:36:45 2013 +0100 wavparse: emit midi-base-note tag from data in 'smpl' chunk Add parsing of the 'smpl' chunk. Right now we only grab the midi-base-note and emit it as a tag. , and is due to the addition of the break statement at line 1444 in the current code. The actual solution might be to properly update the offset, but I do not really know that code/format.
Created attachment 278285 [details] [review] wavparse: Remove break and restore old fallthrough behaviour.
Yes, just the offset needs to be updated :) commit efaf996b1a6788e3fec31048a348bdaaf2d66c53 Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Jun 23 20:53:50 2014 +0200 wavparse: Update offset after parsing adtl chunk Otherwise we will parse it over and over again without ever getting past it. https://bugzilla.gnome.org/show_bug.cgi?id=731533